[gd_scene load_steps=29 format=3 uid="uid://duldf1jvdp4ai"]

[ext_resource type="Script" uid="uid://dnx857i1xqf8g" path="res://scripts/boss.gd" id="1_w478w"]
[ext_resource type="Texture2D" uid="uid://b6yqacd081otm" path="res://assets/sprites/boss/death_1.png" id="2_pxtfd"]
[ext_resource type="Shader" uid="uid://yiduyptlkibx" path="res://shaders/hit.gdshader" id="2_uonfg"]
[ext_resource type="Texture2D" uid="uid://dsml76x6rs1tq" path="res://assets/sprites/boss/death_2.png" id="3_uonfg"]
[ext_resource type="PackedScene" uid="uid://cim0rqyrtolkx" path="res://scenes/ui/health_bar.tscn" id="4_lj2ep"]
[ext_resource type="Texture2D" uid="uid://c4edet0x8goak" path="res://assets/sprites/boss/death_3.png" id="4_whqtw"]
[ext_resource type="Texture2D" uid="uid://b2ca573bb4ge4" path="res://assets/sprites/boss/death_4.png" id="5_1q0wb"]
[ext_resource type="Texture2D" uid="uid://bxc2fefl75r8h" path="res://assets/sprites/boss/death_5.png" id="6_1cw1b"]
[ext_resource type="Texture2D" uid="uid://dmjhcidl63dsx" path="res://assets/sprites/boss/death_6.png" id="7_s1g6i"]
[ext_resource type="Texture2D" uid="uid://imf18pr2fmph" path="res://assets/sprites/boss/prov_1.png" id="8_fvfvp"]
[ext_resource type="Texture2D" uid="uid://crhyugtcu0byc" path="res://assets/sprites/boss/prov_2.png" id="9_rdt2t"]
[ext_resource type="Texture2D" uid="uid://xbfg6et1ylos" path="res://assets/sprites/boss/run_1.png" id="10_3yssg"]
[ext_resource type="Texture2D" uid="uid://dnisti2hmdesx" path="res://assets/sprites/boss/run_2.png" id="11_27n7m"]
[ext_resource type="Texture2D" uid="uid://c1u6byyw4ar30" path="res://assets/sprites/boss/run_3.png" id="12_4jo18"]
[ext_resource type="Texture2D" uid="uid://bna5lp42t3b8b" path="res://assets/sprites/boss/run_4.png" id="13_mg536"]
[ext_resource type="Texture2D" uid="uid://cv17igm7a578r" path="res://assets/sprites/boss/run_5.png" id="14_ropnh"]
[ext_resource type="Texture2D" uid="uid://biqf1bn57nn4n" path="res://assets/sprites/boss/run_6.png" id="15_twjql"]
[ext_resource type="Texture2D" uid="uid://dkqdwixjfrv8g" path="res://assets/sprites/boss/run_7.png" id="16_wu8me"]
[ext_resource type="Texture2D" uid="uid://wvheuad3oung" path="res://assets/sprites/boss/run_8.png" id="17_2l1fi"]
[ext_resource type="Texture2D" uid="uid://b6gspp4h57qge" path="res://assets/sprites/boss/run_9.png" id="18_43r1o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_whqtw"]
shader = ExtResource("2_uonfg")
shader_parameter/flash_progress = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ftqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pxtfd")
}, {
"duration": 1.0,
"texture": ExtResource("3_uonfg")
}],
"loop": true,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pxtfd")
}, {
"duration": 1.0,
"texture": ExtResource("3_uonfg")
}, {
"duration": 1.0,
"texture": ExtResource("4_whqtw")
}, {
"duration": 1.0,
"texture": ExtResource("5_1q0wb")
}, {
"duration": 1.0,
"texture": ExtResource("6_1cw1b")
}, {
"duration": 1.0,
"texture": ExtResource("7_s1g6i")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fvfvp")
}, {
"duration": 1.0,
"texture": ExtResource("9_rdt2t")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_3yssg")
}, {
"duration": 1.0,
"texture": ExtResource("11_27n7m")
}, {
"duration": 1.0,
"texture": ExtResource("12_4jo18")
}, {
"duration": 1.0,
"texture": ExtResource("13_mg536")
}, {
"duration": 1.0,
"texture": ExtResource("14_ropnh")
}, {
"duration": 1.0,
"texture": ExtResource("15_twjql")
}, {
"duration": 1.0,
"texture": ExtResource("16_wu8me")
}, {
"duration": 1.0,
"texture": ExtResource("17_2l1fi")
}, {
"duration": 1.0,
"texture": ExtResource("18_43r1o")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_330b7"]
size = Vector2(129, 143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atjq5"]
size = Vector2(140, 148)

[sub_resource type="Animation" id="Animation_whqtw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_uonfg"]
resource_name = "hit_flash"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_1q0wb"]
resource_name = "no_hit"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1q0wb"]
_data = {
&"RESET": SubResource("Animation_whqtw"),
&"hit_flash": SubResource("Animation_uonfg"),
&"no_hit": SubResource("Animation_1q0wb")
}

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 32
script = ExtResource("1_w478w")
metadata/_custom_type_script = "uid://ck5djahgc7w4f"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_whqtw")
position = Vector2(10, -21)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_8ftqf")
animation = &"idle"
frame_progress = 0.0628163

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 0
position = Vector2(11.5, -12.5)
shape = SubResource("RectangleShape2D_330b7")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 3.0
target_desired_distance = 3.0
path_postprocessing = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
light_mask = 2
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9, -8)
shape = SubResource("RectangleShape2D_atjq5")

[node name="HealthBar" parent="." instance=ExtResource("4_lj2ep")]
position = Vector2(-46, 71)
scale = Vector2(2.221, 2.656)

[node name="HitAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1q0wb")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_activated"]
